# cmake-tutorial

./: .gitmodules  Readme.md
Episode-1_Understanding-The-Basics/: CMakeLists.txt
Episode-2_Libraries_Installing_Pairing-with-Executables/Install/: CMakeLists.txt  main.cpp
Episode-2_Libraries_Installing_Pairing-with-Executables/Libraries/: CMakeLists.txt
Episode-2_Libraries_Installing_Pairing-with-Executables/Libraries/src/: CMakeLists.txt  adder.cpp  adder.h
Episode-2_Libraries_Installing_Pairing-with-Executables/Libraries/test/: CMakeLists.txt  main.cpp
Episode-3_Git-Submodules/: CMakeLists.txt  configure.sh  main.cpp  run.sh
Episode-3_Git-Submodules/Adder/: adder.cpp  adder.h
Episode-4_Versioning-Source-Code/: CMakeLists.txt  build.sh  config.h.in  main.cpp  run
Episode-5_Making-Libs-Optional/: CMakeLists.txt  main.cpp
